css/welcome.css
.welcome {
    position: relative;
    height: 100vh;
    width: 100vw;
    background-image: url("../img/Home.png");
    background-position: center;
    background-repeat: no-repeat; 
}

.welcome-message {
    width: 30rem;
    padding-top: 20rem;
    padding-left: 5rem;
    font-size: var(--font-size-800);
    color: var(--color-accent-300);
    text-align: center;
}

.welcome-scroll-button::after {
    content: '';
    position: absolute;
    width: 2rem;
    height: 2rem;
    bottom: 3rem;
    left: 50%;
    border-right: 4px solid var(--color-accent-500);
    border-bottom: 4px solid var(--color-accent-500);
    border-radius: 4px;
    cursor: pointer;
    rotate: 45deg;
}

